--- a/src/main/resources/templates/recipes.mustache
+++ b/src/main/resources/templates/recipes.mustache
@@ -51,6 +51,7 @@
                     <div class="box_name">
                         <span>Recipe name: {{name}}</span>
                         <span>Cooking time: {{time}}</span>
+                        <span>Author: {{authorName}}</span>
                     </div>
                 </div>
             {{/recipes}}
