--- a/src/main/resources/static/styles/recipes.css
+++ b/src/main/resources/static/styles/recipes.css
@@ -1,40 +1,171 @@
-.main-header {
-    width: 100%;
-    height: 150px;
-    background: green;
+@import url(https://fonts.googleapis.com/css?family=Lora);
+body {
+    margin:0;
 }
-ul {
-    display: -webkit-flex;
-    list-style: none;
-    margin: 0 auto;
-}
-.account-header {
-    width: 100%;
-    height: 30px;
-    background: yellow;
-}
-.logo-header {
-    width: 100%;
-    height: 70px;
-    background: orange;
-}
-.menu-header {
-    width: 100%;
-    height: 50px;
-    background: pink;
-
-    display: flex;
-    margin: 0;
-}
-.menu-header a {
-    padding: 1em;
-    display: block;
+a {
+    text-decoration: none;
+    font-family: 'Lora', serif;
+    cursor: pointer;
 }
 .content {
     max-width: 1140px;
     margin-right: auto;
     margin-left: auto;
 }
+
+
+
+
+.header-account {
+    width: 100%;
+    background: #d9c6c0;
+    position: sticky;
+    top: 0;
+    z-index: 500;
+}
+.header-account-content {
+
+}
+.header-account-content-log {
+    margin-left: auto;
+    display: table;
+    padding: 10px;
+}
+.header-account-content-log > a {
+    margin: 10px;
+    font-size: 20px;
+    font-weight: 800;
+    color: #946659;
+    background: linear-gradient(to right, #020101, #020101 50%, #946659 50%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: 200% 100%;
+    background-position: 100%;
+    transition: background-position 275ms ease;
+}
+.header-account-content-log > a:hover {
+   background-position: 0 100%;
+}
+.header-account-content-log > span {
+    font-size: 20px;
+    font-weight: 800;
+    color: #946659;
+}
+.hidden-logo {
+    width: 84px;
+    opacity: 0;
+    position: fixed;
+    margin-top: 2px;
+}
+.hidden-logo > a {
+    display: block;
+}
+.hidden-logo > a > img {
+    width: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+.header-logo {
+    width: 100%;
+    background: #f7e8e3;
+    padding: 1em 0;
+    position: relative;
+}
+.header-logo-content {
+    text-align: center;
+}
+.header-logo-content-img {
+    max-width: 221px;
+    display: inline-block;
+}
+.header-logo-content-img > a {
+    display: block;
+}
+.header-logo-content-img > a > img {
+    width: 100%;
+    transition: transform .4s;
+}
+.header-logo-content-img > a > img:hover {
+  transform: scale(1.2);
+}
+
+
+
+
+
+
+
+
+.header-menu {
+    width: 100%;
+    background: #f7e8e3;
+    position: sticky;
+    top: 45px;
+    border-bottom-color: black;
+    border-bottom: 1px solid #946659;
+    border-top: 1px solid #946659;
+}
+.header-menu-content {
+
+}
+.header-menu-content > ul {
+    text-align: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.header-menu-content > ul > li {
+    display: inline-block;
+}
+.header-menu-content > ul > li > a {
+    padding: 1em;
+    font-size: 20px;
+    font-weight: 800;
+    display: inline-block;
+    color: #946659;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    overflow: hidden;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+    -webkit-transition-property: color, background-color;
+    transition-property: color, background-color;
+}
+
+.header-menu-content > ul > li > a:hover {
+    -webkit-animation-name: hvr-back-pulse;
+    animation-name: hvr-back-pulse;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    background-color: #d9c6c0;
+    color: #020101;
+}
+
+
+
+
+
+
+
+
+
 .container {
     background: #bbb;
     display: flex;
