--- a/src/main/resources/static/styles/recipes.css
+++ b/src/main/resources/static/styles/recipes.css
@@ -198,9 +198,17 @@ a, p {
     height: 300px;
     background: blue;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 .box-picture > a {
     display: block;
+    height: 300px;
+}
+.box-picture > a > img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
 }
 .box-info {
     height: 100px;
