login, logout, registr

--- a/src/main/resources/static/styles/recipes.css
+++ b/src/main/resources/static/styles/recipes.css
@@ -16,160 +16,6 @@ a, p {
 
 
 
-
-.header-account {
-    width: 100%;
-    background: #d7ad9d;
-    position: sticky;
-    top: 0;
-    z-index: 500;
-}
-.header-account-content {
-
-}
-.header-account-content-log {
-    margin-left: auto;
-    display: table;
-    padding: 10px;
-}
-.header-account-content-log > a {
-    margin: 10px;
-    font-size: 20px;
-    font-weight: 800;
-    color: #662d1c;
-    background: linear-gradient(to right, #020101, #020101 50%, #662d1c 50%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 200% 100%;
-    background-position: 100%;
-    transition: background-position 275ms ease;
-}
-.header-account-content-log > a:hover {
-   background-position: 0 100%;
-}
-.header-account-content-log > span {
-    font-size: 20px;
-    font-weight: 800;
-    color: #946659;
-}
-.hidden-logo {
-    width: 84px;
-    opacity: 0;
-    position: fixed;
-    margin-top: 2px;
-}
-.hidden-logo > a {
-    display: block;
-}
-.hidden-logo > a > img {
-    width: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-.header-logo {
-    width: 100%;
-    background: #f7e8e3;
-    padding: 1em 0;
-    position: relative;
-}
-.header-logo-content {
-    text-align: center;
-}
-.header-logo-content-img {
-    max-width: 221px;
-    display: inline-block;
-}
-.header-logo-content-img > a,
-.footer-logo-content-img > a {
-    display: block;
-}
-.header-logo-content-img > a > img,
-.footer-logo-content-img > a > img {
-    width: 100%;
-    transition: transform .4s;
-}
-.header-logo-content-img > a > img:hover {
-  transform: scale(1.2);
-}
-
-
-
-
-
-
-
-
-.header-menu {
-    width: 100%;
-    background: #f7e8e3;
-    position: sticky;
-    top: 45px;
-    border-bottom: 1px solid #946659;
-    border-top: 1px solid #946659;
-    z-index: 100;
-}
-.header-menu-content {
-
-}
-.header-menu-content > ul,
-.footer-menu-content > ul {
-    text-align: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-.header-menu-content > ul > li,
-.footer-menu-content > ul > li {
-    display: inline-block;
-}
-.header-menu-content > ul > li > a {
-    padding: 1em;
-    font-size: 20px;
-    font-weight: 800;
-    display: inline-block;
-    color: #946659;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    overflow: hidden;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transition-property: color, background-color;
-    transition-property: color, background-color;
-}
-
-.header-menu-content > ul > li > a:hover {
-    -webkit-animation-name: hvr-back-pulse;
-    animation-name: hvr-back-pulse;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-delay: 0.5s;
-    animation-delay: 0.5s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    background-color: #d9c6c0;
-    color: #020101;
-}
-
-
-
-
-
-
-
-
 .body-part {
     margin-top: 30px;
     margin-bottom: 50px;
@@ -189,6 +35,7 @@ a, p {
     padding: 1% 2%;
     border: 1px solid #946659;
     min-height: 800px;
+    box-shadow: 0px 10px 40px 20px rgba(0, 0, 0, 0.2);
 }
 .box {
     width: 32%;
@@ -246,99 +93,4 @@ a, p {
 }
 .box:hover::after {
     opacity: 1;
-}
-
-
-
-
-.footer {
-    width: 100%;
-    background: #bbb;
-}
-.footer-logo {
-    width: 100%;
-    padding: 1em 0;
-    position: relative;
-    background: #6e5b57;
-}
-.footer-logo-content {
-
-}
-.footer-logo-content-img {
-    max-width: 221px;
-    display: inline-block;
-}
-.footer-logo-content-img > a > img {
-    -webkit-filter: brightness(0) invert(1);
-    filter: brightness(0) invert(1);
-}
-.footer-logo-content-icons {
-    float: right;
-    padding: 1em 0;
-}
-.footer-logo-content-icons > ul > li {
-    display:inline-block;
-    list-style-type:none;
-    -webkit-user-select:none;
-    -moz-user-select:none;
-  }
-.footer-logo-content-icons > ul > li > a {
-    border-bottom: none;
-    display: inline-block;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-  }
-.footer-logo-content-icons > ul > li > a:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-}
-.footer-logo-content-icons > ul > li > a > img {
-    width:30px;
-    height:30px;
-    margin-right: 20px;
-    -webkit-filter: brightness(0) invert(1);
-    filter: brightness(0) invert(1);
-}
-
-.footer-menu {
-    width: 100%;
-    background: #bda6a2;
-}
-.footer-menu-content {
-
-}
-.footer-menu-content > ul {
-    border-bottom: 1px solid #946659;
-}
-.footer-menu-content > ul > li > a {
-    display: block;
-    margin: 0 10px;
-    padding: 18px;
-    font-size: 20px;
-    font-weight: 800;
-    color: white;
-    background: linear-gradient(to right, #020101, #020101 50%, white 50%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 200% 100%;
-    background-position: 100%;
-    transition: background-position 275ms ease;
-}
-.footer-menu-content > ul > li > a:hover {
-    background-position: 0 100%;
-}
-.footer-menu-author {
-    display: flex;
-}
-.footer-menu-author > p {
-    margin: 16px 0;
-}
-.footer-menu-author > p > a {
-    text-decoration: underline;
-    color: black;
 }
