--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -26,6 +26,7 @@
                     </form>
                 </div>
                 <div><a th:href="@{/recipes}"><button class="button-back">Back</button></a></div>
+                <div class="login-enter">Already have an account? You can log in <a th:href="@{/login}">here</a>.</div>
             </div>
         </div>
     </div>
