--- a/src/main/resources/templates/recipes.html
+++ b/src/main/resources/templates/recipes.html
@@ -12,7 +12,7 @@
 <body>
     <div th:replace="/macros/header.html"></div>
         <div class="body-part content">
-            <div class="body-part-title"><p>Recipes list:</p></div>
+            <div class="body-part-title"><p>Recipes list</p></div>
             <div class="body-part-container">
                 <div class="box" th:each="recipe : ${recipes}">
                     <div class="box-picture">
