--- a/src/main/resources/templates/createRecipe.html
+++ b/src/main/resources/templates/createRecipe.html
@@ -3,55 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Recipe</title>
+    <link rel="stylesheet" href="/static/styles/header.css">
+    <link rel="stylesheet" href="/static/styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/createRecipe.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/static/js/script.js"></script>
+    <script src="/static/js/count.js"></script>
 </head>
 <body>
     <div th:replace="/macros/header.html"></div>
-    <h3>Create recipe:</h3>
-        <div>
-            <form th:action="@{/createRecipe}" method="post" name="recipe" enctype="multipart/form-data">
-                <table>
-                    <tr>
-                        <td>Recipe name: </td>
-                        <td><input type="text" name="name" placeholder="Caesar" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Cooking time: </td>
-                        <td><input type="text" name="time" placeholder="10 min" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Ingredients: </td>
-                        <td><textarea name="ingredients" placeholder="Some products" autocomplete="off"></textarea>></td>
-                    </tr>
-                    <tr>
-                        <td>Cook plan: </td>
-                        <td><textarea name="steps" placeholder="Steps" autocomplete="off"></textarea>></td>
-                    </tr>
-                    <tr>
-                        <td>Calories: </td>
-                        <td><input type="number" name="kcal" placeholder="630" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Fat: </td>
-                        <td><input type="number" name="fat" placeholder="30" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Sugars: </td>
-                        <td><input type="number" name="sugars" placeholder="15" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Email: </td>
-                        <td><input type="email" name="email" placeholder="some@email.com" autocomplete="off"></td>
-                    </tr>
-                    <tr>
-                        <td>Picture: </td>
-                        <td><input type="file" name="file"></td>
-                    </tr>
-                </table>
-                <div><button type="submit">Create new recipe</button></div>
-            </form></br>
-            <a th:href="@{/recipes}">Recipes list</a>
+        <div class="body-part content">
+            <div class="body-part-title"><p>Create recipe</p></div>
+            <div class="body-part-blocks">
+                <div class="image"></div>
+                <div class="form">
+                    <div class="form-title"><p>Form:</p></div>
+                    <form th:action="@{/createRecipe}" th:object="${recipe}" enctype="multipart/form-data" method="post">
+                        <div class="input-field">
+                            <div class="input-field-block">
+                                <input class="input-line cook-name" type="text" th:field="*{name}" placeholder="Name of dish" autocomplete="off" required />
+                                <div class="cook-time"><label>Cooking time: </label>
+                                <input class="input-line" type="time" th:field="*{time}" autocomplete="off" required /></div>
+                            </div>
+                            <div class="cook-error">
+                                <span th:if="${#fields.hasErrors('name')}" class="i"></span><small th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+                            </div>
+
+                            <div class="input-field-block">
+                                <label>Ingredients: </label>
+                                <textarea class="input-line" th:field="*{ingredients}" placeholder="Write down the ingredients you need (max 300 symbols)" autocomplete="off" th:maxlength="300" required></textarea>
+                            </div>
+                            <div class="cook-error">
+                                <span th:if="${#fields.hasErrors('ingredients')}" class="i"></span><small th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}"></small>
+                            </div>
+
+                            <div class="input-field-block">
+                                <label>Steps cook: </label>
+                                <textarea class="input-line" th:field="*{steps}" placeholder="Describe the cooking process (max 300 symbols)" autocomplete="off" th:maxlength="300" required></textarea>
+                            </div>
+                            <div class="cook-error">
+                                <span th:if="${#fields.hasErrors('steps')}" class="i"></span><small th:if="${#fields.hasErrors('steps')}" th:errors="*{steps}"></small>
+                            </div>
+
+                            <div class="input-field-block trio">
+                                <input onchange="changeHandler(this, 999)" class="input-line" type="number" name="kcal" placeholder="000" autocomplete="off" maxlength="4" required /><label>kcal / 100g</label>
+                                <input onchange="changeHandler(this, 99)" class="input-line" type="number" name="fat" placeholder="00" autocomplete="off" maxlength="3" required /><label>% (fat)</label>
+                                <input onchange="changeHandler(this, 99)" class="input-line" type="number" name="sugars" placeholder="00" autocomplete="off" maxlength="3" required /><label>sugar / 100g</label>
+                            </div>
+
+                            <div class="input-field-block file">
+                                <input class="input-line cook-email" type="email" th:field="*{email}" placeholder="Write your email" autocomplete="off" required>
+                                <div class="cook-file"><label>Photo dish: </label>
+                                <input class="cook-file-button" type="file" name="file" required></div>
+                            </div>
+                            <div class="cook-error">
+                                <span th:if="${#fields.hasErrors('email')}" class="i"></span><small th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+                            </div>
+
+                            <div class="input-field-block buttons">
+                                <div class="cook-button"><input type="submit" value="Create"/></div>
+                                <div class="cook-back"><a th:href="@{/recipes}">Recipes list</a></div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     <div th:replace="/macros/footer.html"></div>
 </body>
