--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -5,29 +5,31 @@
     <title>Users list</title>
     <link rel="stylesheet" href="/static/styles/header.css">
     <link rel="stylesheet" href="/static/styles/footer.css">
+    <link rel="stylesheet" href="/static/styles/userList.css">
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/static/js/script.js"></script>
 </head>
 <body>
     <div th:replace="/macros/header.html"></div>
-    <h3>List of users:</h3>
-    <table>
-        <tr>
-            <th>#</th>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Role</th>
-            <th></th>
-        </tr>
-        <tr th:each="user, iStat: ${users}">
-            <th scope="row" th:text="${iStat.index + 1}"/>
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.username}"></td>
-            <td th:each="role : ${user.roles}" th:text="${role}"></td>
-            <td><a th:href="@{|/user/${user.id}|}">Edit</a></td>
-        </tr>
-    </table></br>
-    <a href="/recipes">Recipes list</a>
+    <div class="user-list content">
+        <div class="grid-title"><p>List of users:</p></div>
+        <div class="user-list-grid">
+            <div class="list-grid grid-main">
+                <div>№</div>
+                <div>Id</div>
+                <div>Name</div>
+                <div>Roles</div>
+                <div>Operations</div>
+            </div>
+            <div class="list-grid" th:each="user, iStat : ${users}">
+                <div th:text="${iStat.index + 1}"></div>
+                <div th:text="${user.id}"></div>
+                <div th:text="${user.username}"></div>
+                <div class="grid-roles" th:each="role : ${user.roles}" th:text="${role}"></div>
+                <div><a th:href="@{|/user/${user.id}|}">Edit</a> / <a th:href="@{|/user/${user.id}/delete|}">Delete</a></div>
+            </div>
+        </div>
+    </div>
     <div th:replace="/macros/footer.html"></div>
 </body>
 </html>
