--- a/src/main/resources/static/styles/recipes.css
+++ b/src/main/resources/static/styles/recipes.css
@@ -25,7 +25,7 @@ a, p {
 }
 .body-part-title p {
     font-size: 28px;
-    cursor: default:
+    cursor: default;
 }
 .body-part-container {
     background: #f7e8e3;
