--- a/src/main/resources/templates/userEdit.html
+++ b/src/main/resources/templates/userEdit.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>User edit (ADMIN)</title>
+    <link rel="icon" href="/static/img/icon-page.png">
     <link rel="stylesheet" href="/static/styles/header.css">
     <link rel="stylesheet" href="/static/styles/footer.css">
     <link rel="stylesheet" href="/static/styles/userEdit.css">
